
- Fixed empty (zero column) sqlite inserts, allowing inserts on
  autoincrementing single column tables.

- Added contains operator (which generate a "LIKE %<other>%" clause).

- fixed expression translation of text() clauses; this repairs various
  ORM scenarios where literal text is used for SQL expressions
  
- sqlite will reflect "DECIMAL" as a numeric column.

- Renamed the Dialect attribute 'preexecute_sequences' to
  'preexecute_pk_sequences'.  An attribute proxy is in place for out-of-tree
  dialects using the old name.

- de-cruftified backref configuration code, backrefs which step on existing
  properties now raise an error [ticket:832]

- improved behavior of add_property() etc., fixed [ticket:831] involving
  synonym/deferred

- fixed clear_mappers() behavior to better clean up after itself

- behavior of query.options() is now fully based on paths, i.e. an option
  such as eagerload_all('x.y.z.y.x') will apply eagerloading to only
  those paths, i.e. and not 'x.y.x'; eagerload('children.children') applies
  only to exactly two-levels deep, etc. [ticket:777]

- Made access dao dection more reliable [ticket:828]

0.4.0
-----

- (see 0.4.0beta1 for the start of major changes against 0.3, 
  as well as http://www.sqlalchemy.org/trac/wiki/WhatsNewIn04 )

- Added initial Sybase support (mxODBC so far) [ticket:785]

- Added partial index support for PostgreSQL. Use the postgres_where keyword
  on the Index.

- string-based query param parsing/config file parser understands
  wider range of string values for booleans [ticket:817]
  
- backref remove object operation doesn't fail if the other-side
  collection doesn't contain the item, supports noload collections
  [ticket:813]

- removed __len__ from "dynamic" collection as it would require issuing
  a SQL "count()" operation, thus forcing all list evaluations to issue
  redundant SQL [ticket:818]
  
- inline optimizations added to locate_dirty() which can greatly speed up